tests/whole_screen/snapshots/whole_screen__a_mistyped_command_mid_turn_is_refused_on_the_panel_and_not_queued.snap
---
source: tests/whole_screen/main.rs
assertion_line: 636
expression: refused
---
60x24 cursor 23,0 scrolled 0
|│ No recent sessions                                      ││|
|│                                                         ││|
|│ ─────────────────────────────────────────────────────── ││|
|│                                                         ││|
|│ Tips                                                    ││|
|│                                                         │┃|
|│ · /          opens the command list                     │┃|
|│ · \ enter    adds a line without sending                │┃|
|│ · shift+tab  steps the permission mode                  │┃|
|│ · ctrl+c     clears the line typed so far               │┃|
|╰─────────────────────────────────────────────────────────╯┃|
|                                                           ┃|
|› start it                                                 ┃|
|                                                           ┃|
|● Bash(sleep 30)                                           ┃|
|  ⎿ (no output yet) (+2 lines · ctrl+o to expand)          ┃|
|                                                           ┃|
|It is started. That is all.                                ┃|
|────────────────────────────────────────────────────────────|
|                                                            |
|! no such command: /modle                                   |
|  nearest: /model, /mode                                    |
|                                                            |
|esc to close                                                |
