tests/whole_screen/snapshots/whole_screen__a_model_picked_mid_turn_is_confirmed_then_held.snap
---
source: tests/whole_screen/main.rs
assertion_line: 749
expression: window.picture()
---
100x24 cursor 22,0 scrolled 0
|│                                  │ · ctrl+c     clears the line typed so far                     │|
|╰──────────────────────────────────────────────────────────────────────────────────────────────────╯|
|                                                                                                    |
|› start it                                                                                          |
|                                                                                                    |
|● Bash(sleep 30)                                                                                    |
|  ⎿ (no output yet) (+2 lines · ctrl+o to expand)                                                   |
|                                                                                                    |
|It is started. That is all.                                                                         |
|────────────────────────────────────────────────────────────────────────────────────────────────────|
|                                                                                                    |
|Switch model?                                                                                       |
|                                                                                                    |
|This session is cached for the current model. Switching to claude-opus-5-5 means the full transcript|
|gets re-read on your next message.                                                                  |
|                                                                                                    |
|› Yes                                                                                               |
|  switch to claude-opus-5-5                                                                         |
|                                                                                                    |
|  No                                                                                                |
|  go back                                                                                           |
|                                                                                                    |
|esc to go back                                                                                      |
|                                                                                                    |
