tests/whole_screen/snapshots/whole_screen__a_prompt_typed_while_room_is_being_made_is_sent_once_there_is_room.snap
---
source: tests/whole_screen/main.rs
assertion_line: 2295
expression: window.picture()
---
80x24 cursor 21,4 scrolled 0
|› the second thing                                                             │|
|                                                                               │|
|two answer                                                                     │|
|                                                                               │|
|› the third thing                                                              │|
|                                                                               │|
|three answer                                                                   │|
|                                                                               │|
|› /compact                                                                     •|
|                                                                               │|
|───────────────────────────────────────────────────────────────────────────────┃|
| compacted · you asked                                                         ┃|
| 4 messages became a recap · 5k → 6k carried · 2 turns kept whole              ┃|
|───────────────────────────────────────────────────────────────────────────────┃|
|                                                                               ┃|
|› what next                                                                    ┃|
|                                                                               ┃|
|the answer to what was queued                                                  ┃|
|                                                                                |
|                                                                 98% window left|
|╭──────────────────────────────────────────────────────────────────────────────╮|
|│ ›                                                                            │|
|╰──────────────────────────────────────────────────────────────────────────────╯|
|ask mode on (shift+tab to cycle)                       anthropic · claude-test-1|
