tests/whole_screen/snapshots/whole_screen__a_run_with_no_key_for_anything_opens_on_the_panel_that_takes_one.snap
---
source: tests/whole_screen/main.rs
expression: window.picture()
---
80x24 cursor 23,0 scrolled 12
|╰──────────────────────────────────────────────────────────────────────────────╯|
|                                                                                |
|                                                                                |
|Warning: No models available. Use /login or set an API key environment variable.|
|Then use /model to select a model.                                              |
|                                                                                |
|────────────────────────────────────────────────────────────────────────────────|
|                                                                                |
|Log in                                                                          |
|                                                                                |
|crucible holds no key for any provider, so there is nothing it can ask yet.     |
|Choose one to give a key for. It is typed into a box that does not echo it, and |
|asked from the next turn on.                                                    |
|                                                                                |
|› Anthropic                                                                     |
|  typed here, or set in ANTHROPIC_API_KEY                                       |
|                                                                                |
|  MoonshotAI                                                                    |
|  typed here, or set in MOONSHOT_API_KEY                                        |
|                                                                                |
|  OpenAI                                                                        |
|  typed here, or set in OPENAI_API_KEY                                          |
|                                                                                |
|esc to skip; /login opens this again                                            |
