tests/whole_screen/snapshots/whole_screen__a_session_with_no_credential_draws_the_welcome_the_warning_and_the_box.snap
---
source: tests/whole_screen/main.rs
expression: window.picture()
---
80x24 cursor 19,4 scrolled 0
|╭─ crucible v0.1.2 ────────────────────────────────────────────────────────────╮|
|│                                  │ Recent sessions                           │|
|│  ▄▄▄ ▄▄▄ █  █ ▄▄▄ █ ▄▄▄ █   ▄▄▄  │                                           │|
|│  █   █▄▄ █  █ █   █ █▄█ █   █▄▄  │ No recent sessions                        │|
|│  ▀▄▄ █ █ ▀▄▄▀ ▀▄▄ █ █▄█ █▄▄ █▄▄  │                                           │|
|│                                  │ ───────────────────────────────────────── │|
|│  no model selected               │                                           │|
|│                                  │ Tips                                      │|
|│  /…/workspace                    │                                           │|
|│                                  │ · /          opens the command list       │|
|│                                  │ · shift+tab  steps the permission mode    │|
|│                                  │ · ctrl-c     clears the line typed so far │|
|╰──────────────────────────────────────────────────────────────────────────────╯|
|                                                                                |
|                                                                                |
|Warning: No models available. Use /login or set an API key environment variable.|
|Then use /model to select a model.                                              |
|                                                                                |
|╭──────────────────────────────────────────────────────────────────────────────╮|
|│ ›                                                                            │|
|╰──────────────────────────────────────────────────────────────────────────────╯|
|ask mode on (shift+tab to cycle)                                                |
|                                                                                |
|                                                                                |
